objdump: Fix check for corrupt reloc information, to allow for the fact that PDP11 relocs are bigger when in internal format.

PR 23931
	* objdump.c (dump_relocs_in_section): When checking for an
	unreasonable amount of relocs in a bfd, allow for the fact that
	the internal representation of a reloc may be bigger than the
	external representation.